# spidey_kafka

./: README.md  docker-compose.yaml  example.env  main.py  pyproject.toml
